# DeleGate

./: .env.example  CODE_REVIEW_1.md  Dockerfile  README.md  SPEC-DG-0000.txt  pyproject.toml
migrations/: env.py
migrations/versions/: 001_initial_schema.py
src/delegate/: __init__.py  api.py  auth.py  config.py  database.py  main.py  mcp_server.py  models.py  planner.py  receipts.py  registry.py
src/delegate/middleware/: rate_limit.py
tests/: __init__.py  conftest.py  test_models.py  test_planner.py  test_registry.py
